--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: jenkins_hash
+name: fast_equatable
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 # dependencies:
 #   path: ^1.8.0
@@ -12,5 +12,5 @@ environment:
 dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
-dependencies: 
+dependencies:
   collection: ^1.15.0
