--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,17 +2,14 @@ name: example
 description: A simple command-line application.
 version: 1.0.0
 publish_to: none
-# homepage: https://www.example.com
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-# dependencies:
-#   path: ^1.8.0
-
-dev_dependencies:
-  pedantic: ^1.10.0
 dependencies:
   equatable: ^2.0.3
   fast_equatable:
     path: ../
+
+dev_dependencies:
+  lints: ^2.0.0
