--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,8 @@ version: 1.0.0
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-# dependencies:
-#   path: ^1.8.0
-
 dev_dependencies:
-  pedantic: ^1.10.0
+  lints: ^2.0.0
   test: ^1.16.0
 dependencies:
   collection: ^1.15.0
