--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,12 +1,14 @@
 name: example
 description: A simple command-line application.
 version: 1.0.0
+repository: https://github.com/FaFre/fast_equatable
 publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  benchmark_harness: ^2.2.0
   equatable: ^2.0.3
   fast_equatable:
     path: ../
