--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fast_equatable
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# homepage: https://www.example.com
+description: A simple Dart package that provides fast and secure equality comparison as a mixin. It optionally offers hash caching to improve the speed of Map's and Set's significantly.
+version: 0.9.0
+repository: https://github.com/FaFre/fast_equatable
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
