--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: fast_equatable
 description: A simple Dart package that provides fast and secure equality comparison as a mixin. It optionally offers hash caching to improve the speed of Map's and Set's significantly.
-version: 0.9.1
+version: 1.0.0
 repository: https://github.com/FaFre/fast_equatable
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dev_dependencies:
-  lints: ^2.0.0
+  lint: ^2.1.2
   test: ^1.16.0
 dependencies:
   collection: ^1.15.0
